<resources>
    <string name="app_name">HelloWorld</string>
    <string name="action_tcp">TCP</string>
    <string name="action_udp">UDP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="send">Send</string>

    <string name="ip">IP-Address:</string>
    <string name="port">Port:</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_message">Type Message</string>
    <string name="ip_address_hint">IP Address of Receiver</string>
    <string name="port_hint">Port Number</string>
</resources>