<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/ip_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/ip"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ip_address"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:hint="@string/ip_address_hint"
        app:layout_constraintStart_toEndOf="@id/ip_textview"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/port_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:text="@string/port"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ip_textview" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/port"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:hint="@string/port_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/ip_textview"
        app:layout_constraintTop_toBottomOf="@id/ip_address"/>


    
    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toEndOf="@id/message_field"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/message_field"
        android:layout_width="246dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_message"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/messages"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/port"
        app:layout_constraintBottom_toTopOf="@id/message_field">
        <TextView android:id="@+id/messageView"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:paddingBottom="8dip"/>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>